[package]
name = "dtw_rs_band_fork"
version = "1.0.1"
edition = "2021"
authors = ["Lars Skifjeld <larssski@gmail.com>"]
keywords = ["dynamic","time", "warping", "dtw"]
homepage = "https://github.com/shshemi/dtw-rs"
documentation = "https://docs.rs/dtw_rs/latest/dtw_rs/"
repository = "https://github.com/shshemi/dtw-rs"
readme = "README.md"
description = "Fork of Dynamic Time Warping Library for Rust"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
float-cmp = "0.9.0"
